# voicetex

./: .gitignore  LICENSE  README.md  VoiceTeX.bat  electron-builder.yml  index.html  installer.iss  package-lock.json  package.json  tsconfig.server.json
.github/workflows/: build.yml
backend-rust/: Cargo.toml
backend-rust/src/: db.rs  main.rs  models.rs
backend-rust/src/routes/: history.rs  mod.rs  sessions.rs
electron/: main.ts
server/: db.ts  index.ts
server/routes/: history.ts  sessions.ts
src/: App.tsx  index.css
src/api/: client.ts
src/components/: ApiKeyInput.tsx  AudioManager.tsx  AudioRecorder.tsx  AudioSection.tsx  CostDisplay.tsx  LatexOutput.tsx  ModelSelectionPanel.tsx  Sidebar.tsx
src/hooks/: useConversation.ts  useCostTracker.ts  useHistory.ts  useOpenAITranscriber.ts  useSession.ts  useTranscriber.ts
src/utils/: Constants.ts
